@@ -1,5 +1,9 @@
 [0.9.30]
 - Added support for output field `cigar` to the tabular format.
+- Changed the maximum repeat period to 50 for tantan masking.
+- Changed the tantan masking to ungapped mode.
+- Changed the tantan probability decay to 1.0.
+- Improved the performance of repeat masking.
 
 [0.9.29]
 - Fixed a bug that could cause taxonomy features to function incorrectly for databases created by versions 0.9.27 and 0.9.28.
